[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
spiderfoot = "spiderfoot:sf"

[project.urls]
Homepage = "https://spiderfoot.net/"
Repository = "https://github.com/smicallef/spiderfoot.git"
Issues = "https://github.com/smicallef/spiderfoot/issues"

[project]
name = "spiderfoot"
authors = [
    { name = "smicallef" }
]
description = "SpiderFoot automates OSINT for threat intelligence and mapping your attack surface."
readme = "README.md"
# Do not set license to file. Causes issues with rpm packaging for some reason.
license = {text = "MIT"}
dynamic = ["dependencies", "version"]
keywords = [ "osint", "reconnaissance", "information gathering" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security"
]

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }
version = { attr = "spiderfoot.__version__" }

[tool.setuptools]
package-dir = {"" = "spiderfoot"}

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.poetry]
name = "spiderfoot"
version = "3.4.0"
description = "SpiderFoot automates OSINT for threat intelligence and mapping your attack surface."
authors = ["smicallef"]
license = "MIT"
readme= "README.md"
repository = "https://github.com/smicallef/spiderfoot"
homepage = "https://spiderfoot.net/"
keywords = ["osint", "reconnaissance", "information gathering"]

[tool.poetry.dependencies]
python = "^3.11"
adblockparser = ">=0.7,<1"
dnspython = ">=2.3.0,<3"
exifread = ">=2.3.2,<3"
cherrypy = ">=18.8.0,<19"
cherrypy-cors = ">=1.6,<2"
mako = ">=1.2.4,<2"
beautifulsoup4 = ">=4.11.2,<5"
lxml = ">=4.9.2,<5"
netaddr = ">=0.8.0,<1"
pysocks = ">=1.7.1,<2"
requests = ">=2.28.2,<3"
ipwhois = ">=1.1.0,<1.2.0"
ipaddr = ">=2.2.0,<3"
phonenumbers = ">=8.13.6,<9"
pygexf = ">=0.2.2,<0.3"
pypdf2 = ">=1.28.6,<2"
python-whois = ">=0.7.3,<0.8"
secure = ">=0.3.0,<0.4.0"
pyopenssl = ">=21.0.0,<22"
python-docx = ">=0.8.11,<0.9"
python-pptx = ">=0.6.21,<0.7"
networkx = ">=2.6.3,<2.7"
cryptography = ">=3.4.8,<4"
publicsuffixlist = ">=0.9.3,<0.10"
openpyxl = ">=3.1.1,<4"
pyyaml = ">=6.0.0,<7"
